--- a/gb/20/8/24/n12352842.md
+++ b/gb/20/8/24/n12352842.md
@@ -1,20 +1,20 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rxpdbu307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/rxpdbu307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/rxpdbu307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rxpdbu307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/rxpdbu307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rxpdbu307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/rxpdbu307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rxpdbu307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/rxpdbu307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rxpdbu307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/rxpdbu307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rxpdbu307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/rxpdbu307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rxpdbu307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/rxpdbu307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rxpdbu307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/rxpdbu307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/rxpdbu307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/rxpdbu307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/rxpdbu307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rxpdbu307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/rxpdbu307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/rxpdbu307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>8月24日新增9例 奥克兰3级持续至30日</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/08/GettyImages-1268143935-600x400.jpg" />
 <h6>8月24日新增9例 奥克兰3级持续至30日。图为2020年8月24日，新西兰总理杰辛达·阿德恩在惠灵顿议会新闻发布会上对媒体公布新西兰警报级别设置安排。8月30日(周日)晚上11:59之前，奥克兰将保持3级警报，而全国其他地区将保持2级警报。( Hagen Hopkins/Getty Images))
 </h6>
 <hr>
-<p>【大纪元2020年08月24日讯】（大纪元记者刘淇晴<ahref="https://github.com/rxpdbu307/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>编译报导）根据卫生部总干事阿什利·布卢姆菲尔德（Ashley Bloomfield）的疫情更新发布会，8月24日（周一）新西兰新增9例<ahref="https://github.com/rxpdbu307/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>病例，其中8例与<ahref="https://github.com/rxpdbu307/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0.md#1">奥克兰</a>集群有关，1例来自归国隔离酒店。</p>
+<p>【大纪元2020年08月24日讯】（大纪元记者刘淇晴<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>编译报导）根据卫生部总干事阿什利·布卢姆菲尔德（Ashley Bloomfield）的疫情更新发布会，8月24日（周一）新西兰新增9例<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>病例，其中8例与<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0.md#1">奥克兰</a>集群有关，1例来自归国隔离酒店。</p>
 <h2>8例社区传播详情</h2>
 <p>今日的社区病例中，1例在公交车上被感染，4例为已确诊者的家庭接触，2例因工作接触感染，还有1例在教堂被感染。卫生部详细资料显示，新增病例中2名为9岁以下儿童。</p>
 <p>在这8例社区病例中，1例为疑似病例，其余为确诊病例。</p>
-<p>布卢姆菲尔德说，在巴士中被感染的情况大概发生在10天前，因此还可能发现新的确诊病例。好在当时<ahref="https://github.com/rxpdbu307/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0.md#1">奥克兰</a>已经处于3级警报，因此面临感染风险的人数有所减少。</p>
+<p>布卢姆菲尔德说，在巴士中被感染的情况大概发生在10天前，因此还可能发现新的确诊病例。好在当时<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0.md#1">奥克兰</a>已经处于3级警报，因此面临感染风险的人数有所减少。</p>
 <p>布卢姆菲尔德表示，“绝大多数”病例与密切接触有关，这令人鼓舞。</p>
-<p>“全政府”小组的调查结果显示，奥克兰人非常支持和愿意遵守<ahref="https://github.com/rxpdbu307/djy/blob/master/gb/tag/%E5%B0%81%E9%94%81.md#1">封锁</a>规定。但布卢姆菲尔德说，如果封锁一直持续，或者不得不继续这样做时，由封锁引发的疲劳将成为一个问题。</p>
+<p>“全政府”小组的调查结果显示，奥克兰人非常支持和愿意遵守<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%B0%81%E9%94%81.md#1">封锁</a>规定。但布卢姆菲尔德说，如果封锁一直持续，或者不得不继续这样做时，由封锁引发的疲劳将成为一个问题。</p>
 <h2>奥克兰集群已成全纽最大集群</h2>
-<p>奥克兰集群已经成为<ahref="https://github.com/rxpdbu307/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>最大的<ahref="https://github.com/rxpdbu307/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>感染集群，已有101名感染者。</p>
+<p>奥克兰集群已经成为<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>最大的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>感染集群，已有101名感染者。</p>
 <p>目前新西兰有1332例确诊病例，现有活跃病例123例，其中19例来自隔离酒店。</p>
 <p>在追踪确诊病例2300位密切接触者工作中，已与2249人取得了联系。已有与奥克兰集群相关的151人被转移到隔离设施，包括82名确诊者。</p>
 <h2>10人住院中 2人在ICU</h2>
@@ -30,7 +30,7 @@
 <p>1个正在调查中的病例今天将进行基因组测序。布卢姆菲尔德说，虽然上一波疫情中并没有进行过基因组测序，但这个方法在这次应对疫情中至关重要。</p>
 <p>布卢姆菲尔德表示，新西兰的目标仍是消灭病毒。除了监测病毒检测工作、接触者追踪，可能卫生部会推出诸如“周一口罩日”的活动鼓励民众戴口罩。</p>
 <p>周末，布卢姆菲尔德出现在工党的竞选广告中的报道成了头条新闻，总干事对此没有作进一步的评论。</p>
-<h2>奥克兰<ahref="https://github.com/rxpdbu307/djy/blob/master/gb/tag/%E5%B0%81%E9%94%81.md#1">封锁</a>延长至本周日</h2>
+<h2>奥克兰<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%B0%81%E9%94%81.md#1">封锁</a>延长至本周日</h2>
 <p>内阁开会完成是否降级的讨论后，总理杰辛达·阿德恩（Jacinda Ardern）在8月24日3点的新闻发布会上公布了内阁的决定。</p>
 <p>阿德恩宣布，奥克兰将于8月30日（周日）11点59分前继续处于3级封锁状态，来更好地控制疫情。其他地区将继续维持2级警报。</p>
 <p>目前奥克兰的3级警报将在8月26日（周三）午夜结束。阿德恩说，额外的4天将使奥克兰有更多的时间为降低警报级别做准备。总理表示奥克兰会分阶段降至2级。</p>
@@ -47,47 +47,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/rxpdbu307/djy/blob/master/gb/22/2/27/n13609500.md#1">2月28日起 奥克兰每天约40趟公交临时停运</a></li>
-<li><a href="https://github.com/rxpdbu307/djy/blob/master/gb/22/2/27/n13609450.md#1">数百人在奥克兰抗议中声援乌克兰</a></li>
-<li><a href="https://github.com/rxpdbu307/djy/blob/master/gb/22/2/27/n13608744.md#1">大卫·西摩呼吁取消强制防疫措施</a></li>
-<li><a href="https://github.com/rxpdbu307/djy/blob/master/gb/22/2/27/n13608723.md#1">奥克兰Domain因抗议者露营暂停机动车通行</a></li>
-<li><a href="https://github.com/rxpdbu307/djy/blob/master/gb/22/2/27/n13608657.md#1">国会外抗议第20天 政客拒绝与谈判代表对话</a></li>
-<li><a href="https://github.com/rxpdbu307/djy/blob/master/gb/22/2/26/n13607070.md#1">反强制防疫措施游行横穿奥克兰海港大桥</a></li>
-<li><a href="https://github.com/rxpdbu307/djy/blob/master/gb/22/2/26/n13607050.md#1">国会外抗议第19天 抗议者在国会场地办婚礼</a></li>
-<li><a href="https://github.com/rxpdbu307/djy/blob/master/gb/22/2/26/n13607021.md#1">国会外抗议第18天 预计周末更多抗议者加入</a></li>
-<li><a href="https://github.com/rxpdbu307/djy/blob/master/gb/22/2/25/n13604690.md#1">总理：新西兰发明确信息 谴责俄罗斯的入侵</a></li>
-<li><a href="https://github.com/rxpdbu307/djy/blob/master/gb/22/2/25/n13604676.md#1">高等法院法官推翻警察和国防军疫苗强制令</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691514.md#1">若执政 行动党承诺冻结最低薪 取消新福利</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691502.md#1">目前新西兰各党税收政策一览</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691489.md#1">2月份新住房资源许可批获量创新高</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691465.md#1">4月1日起生效的以下政策会惠及你的钱包吗？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/15/n13647636.md#1">机构暂停解雇未接种员工 包括奥克兰市议会</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/14/n13646305.md#1">临时毛利卫生局获得2200万纽元初始资金</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/14/n13645334.md#1">珍·康萍《犬山记》获英国电影学院奖两项大奖</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/14/n13645276.md#1">政府削减燃油税 公共交通4月1日起半价</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/13/n13643869.md#1">总理承认生活危机 说政府正考虑削减燃油税</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/13/n13643260.md#1">新鲜啤酒花酿制的啤酒 只有纽人现在能喝到</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/31/n10602910.md#1" target="_blank">【还原史实】“三反五反”掠夺企业主 引爆自杀潮</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/6/27/n9325401.md#1" target="_blank">林展翔：迫害法轮功责任人入美将面临制裁</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/2/n10947448.md#1" target="_blank">晓明：与晏乐斌先生谈广西屠杀及文革“处遗”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/25/n11409005.md#1" target="_blank">法轮功反迫害 川普政府与美国国会公开声援</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/3/n13553506.md#1">【未解之谜】梅辛传之三：希特勒的预言</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/17/n13582748.md#1">【奇事】这一种算命术连皇帝都大为惊奇</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/14/n13576687.md#1">【百年真相】瞒天过海 中共炮制“美军细菌战”</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/1/27/n13533579.md#1">唐朝皇族后裔的教训 德性有亏一夕化虎</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/27/n13607928.md#1">【舞蹈三剑客】台上一分钟，台下十年功！《为神欢舞》制作花絮</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/26/n13607455.md#1">【拍案惊奇】乌克兰悲壮抗战 中共海军突发演训</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/26/n13606937.md#1">【马克时空】乌克兰抗俄 刺针、标枪、NLAW导弹立战功</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/25/n13605758.md#1">应对俄乌开战 北约反应部队启动 史上首次</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/24/n13603115.md#1">鼓鼓钱包失而复得 杜汶泽妻田蕊妮大赞台湾</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/25/n13605474.md#1">消息：美与北京分享俄入侵情报 中共向俄泄密</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/24/n13603115.md#1">鼓鼓钱包失而复得 杜汶泽妻田蕊妮大赞台湾</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/25/n13605706.md#1">陈婷宣布取消“张艺谋妻子”微博头衔 引猜测</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/24/n13602961.md#1">产后10天俄乌开战 瑞莎焦虑乌克兰亲人全失联</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/24/n13603338.md#1">酒店隔离与好友成邻居 舒淇：巧到不能再巧</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/25/n13604262.md#1">西恩潘“人在乌克兰” 挺进战地拍入侵纪录片</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/25/n13604960.md#1">坚果是抗糖尿病绝佳食物 防高血糖、并发症</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/18/n13586671.md#1">不吃早餐糖尿病风险增40％ 3组早餐养胃强身</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/24/n13602281.md#1">金盏花对皮肤很好 还能消炎止痛、促伤口愈合</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/24/n13602257.md#1">早期胃癌难发现 八个症状需警惕</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/26/n13607115.md#1">【直播】疫情、疫苗 CDC没告诉你的2件事</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11962082.md#1">【最新疫情3.22】川普启动三州国民警卫队</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962674.md#1">意大利口罩被谁买空？意媒驳中共救援谎言</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962341.md#1">对北京掩盖疫情失望 川普：中共非常诡秘</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11963263.md#1">【一线采访】武汉市民：对政府彻底失望</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962520.md#1">企业家吁召开紧急会议 矛头直指中共最高层</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11963031.md#1">胞弟成为台湾女婿 瑞莎曝婚礼照喊开心</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11966011.md#1">刘真44岁辞世 演艺圈好友不舍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11962008.md#1">好莱坞制作人瓦特染疫：身体像被巴士撞到</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/11/n11933384.md#1">断臂僧转世？小蛮童有胆 向康熙帝要官职</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11964127.md#1">后悔或是一味良药 但须在大限前</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11961878.md#1">【历史回眸】人们忘记神 这就是一切的起因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/rxpdbu307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/rxpdbu307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/24/n12352842.htm">8月24日新增9例 奥克兰3级持续至30日</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/24/n12352842.htm">8月24日新增9例 奥克兰3级持续至30日</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/rxpdbu307/djy/blob/master/gb/20/8/24/n12352842.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/rxpdbu307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/rxpdbu307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rxpdbu307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/8/24/n12352842.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
